tests/diagnostics/field_on_non_struct.kal
# Field access requires a struct; the operand here is an integer.
(1 + 2).x;
